cluster-setup/dashboard/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: dashboard-http
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: dashboard.57a7127dd6cb452b952f.francecentral.aksapp.io
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
        path: /
